<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/sort_mode"
            android:checked="true"
            android:title="@string/sort_mode"
            app:showAsAction="always"></item>
    </group>

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/sort_modify"
            android:checked="true"
            android:title="@string/sort_modify"
            app:showAsAction="always"></item>

        <item
            android:id="@+id/sort_name"
            android:title="@string/sort_name"
            app:showAsAction="always"></item>

        <item
            android:id="@+id/sort_time"
            android:title="@string/sort_time"
            app:showAsAction="always"></item>


    </group>



</menu>