<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/myMusic"
            android:icon="@drawable/ic_music"
            android:title="@string/my_Music">

        </item>
        <item
            android:id="@+id/favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorite"
            android:visible="false"></item>

        <item
            android:id="@+id/musicList"
            android:icon="@drawable/ic_musiclist"
            android:title="@string/musicList"
            app:showAsAction="always"></item>


        <item
            android:id="@+id/timer"
            android:icon="@drawable/ic_timer"
            android:title="@string/sleepTimer"
            app:showAsAction="always"></item>

    </group>



</menu>